--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -272,6 +272,7 @@ find_package(Qt4 4.6)
 
 add_subdirectory(toolboxes)
 add_subdirectory(apps)
+add_subdirectory(network)
 
 if (ACE_FOUND AND ISMRMRD_FOUND AND FFTW3_FOUND AND HDF5_FOUND)
   add_subdirectory(gadgets)
